# graphical

./: .coveragerc  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: gh-pages.yml  python-package.yml  ruff-format.yml
docs/: examples.md  index.md  roadmap.md
docs/api/: array.md  bar.md  cell.md  chart.md  data.md  group.md  heat.md  layer.md  mark.md  offset.md  options.md  ridgeline.md  scale.md  sparkline.md
docs/examples/: calendar_heatmap.py  data.py  density.py  gantt.py  heatmap.py  horizon.py  ridgeline.py  stacked_area.py  stacked_bar.py  streamgraph.py
docs/stylesheets/: extra.css
graphical/: bar.py  cell.py  chart.py  ridgeline.py  sparkline.py
img/: build.py
src/graphical/: __main__.py  _buckets.py  _doc.py  _normalize.py  bar.py  cell.py  chart.py  group.py  heat.py  layer.py  mark.py  offset.py  options.py  ridgeline.py  section.py  sparkline.py  vertical.py
src/graphical/array/: __init__.py  _bins.py  _normalize.py
src/graphical/bar/: __init__.py  _bar.py  _cell_value.py  _invert_style.py  _overlap.py  _range.py  _range_stack.py  _stack.py  _types.py
src/graphical/data/: __init__.py  _bands.py  _bins.py  _normalize.py  _pairs.py
src/graphical/mark/: __init__.py  _mark.py  chromatic.py  horizontal.py  vertical.py
src/graphical/scale/: chromatic.py
src/graphical/scale/chromatic/: LICENSE  __init__.py  _scheme.py  cyclical.py  diverging.py  ordinal.py  sequential.py
src/graphical/utils/: __init__.py  _buckets.py  _invert_style.py
tests/: __init__.py  test_bar.py  test_bar_horizontal.py  test_bar_vertical.py  test_cell.py  test_chart.py  test_ridgeline.py  test_sparkline.py  test_stack_horizontal.py  test_stack_vertical.py  util.py
tests/utilities/: asserts.py  markup.py  render.py
tools/: format.py  generate_imgs.py
tools/fonts/: __init__.py
