[tool.poetry]
name = "graphical"
version = "0.1.0"
description = "Render data visualizations to the terminal."
authors = ["Matthias Kalms <mtkalms@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
