[tool.poetry]
name = "graphical"
version = "0.1.0"
description = "Render data visualizations to the terminal."
authors = ["Matthias Kalms <mtkalms@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = ">=14.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
black = "24.4.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
